trivia refactoring